fix(calendar): fix scrolling on mobiles in calendar pickers

--- a/src/core/components/calendar/calendar.less
+++ b/src/core/components/calendar/calendar.less
@@ -428,6 +428,7 @@
   width: 240px;
   .popover-inner {
     height: 100%;
+    overflow: hidden;
   }
 }
 .calendar-time-picker {
